# opan5510-class9

./: .gitignore  README.md  class_example.ipynb  erd.md  lab_example.ipynb  pyproject.toml
data/: HallOfFame.csv  bike_weather.csv
