[project]
name = "opan5510-class9"
version = "0.1.0"
description = "Learning data joins with Polars"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
    "pyarrow>=21.0.0",
    "pandas>=2.3.1",
]

[tool.uv]
dev-dependencies = []
